--- a/MMP240_PeterC_Midterm_Draft/stylesheet.css
+++ b/MMP240_PeterC_Midterm_Draft/stylesheet.css
@@ -21,17 +21,21 @@ p{
 }
 .wrapper img{
   max-width: 100%;
-  height: 575px;
+  max-height: 575px;
   margin-right: 0 auto;
   margin-left: 0 auto;
 }
 #logo img{
   max-width: 195px;
   max-height: 55px;
+  margin-right: 0 auto;
+  margin-left: 0 auto;
 }
 #footer img{
   max-height: 75px;
   max-width: 75px;
+  margin-right: 0 auto;
+  margin-left: 0 auto;
 }
 @media screen 
   and (min-device-width: 1200px) 
