--- a/MMP240_PeterC_Midterm_Draft/stylesheet2.css
+++ b/MMP240_PeterC_Midterm_Draft/stylesheet2.css
@@ -7,6 +7,8 @@ body{
 .wrapper ul{
   display: block;
   list-style-type: none;
+}
+.wrapper li{
   margin-right: 0 auto;
   margin-left: 0 auto;
 }
@@ -18,10 +20,8 @@ body{
   filter: (opacity vaule=50);
 }
 .wrapper img{
-  max-width: 824px;
-  max-height: 173px;
-  margin-right: 0 auto;
-  margin-left: 0 auto;
+  max-width: 100%;
+  max-height: 100%;
 }
 #logo ul{
 	list-style-type: none;
@@ -29,10 +29,14 @@ body{
 #logo img{
   max-width: 195px;
   max-height: 55px;
+  margin-right: 0 auto;
+  margin-left: 0 auto;
 }
 #footer img{
   max-height: 75px;
   max-width: 75px;
+  margin-right: 0 auto;
+  margin-left: 0 auto;
 }
 @media screen 
   and (min-device-width: 1200px) 
